--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
 <!-- SET THE CONTROLLER -->
 
-<body ng-controller="mainController">
+<body ng-controller="todoCtrl">
   <a href="https://github.com/lionelmace/mytodo">
     <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
   </a>
@@ -39,8 +39,8 @@
             <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
             <input type="text" class="form-control input-lg text-center" placeholder="Add a new todo" ng-model="formData.text" required>
 
-            <!-- createToDo() WILL CREATE NEW TODOS -->
-            <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+            <!-- addToDo() WILL CREATE NEW TODOS -->
+            <button type="submit" class="btn btn-primary btn-lg" ng-click="addTodo()">Add</button>
           </div>
         </form>
       </div>
