footer and logo

--- a/public/new.html
+++ b/public/new.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
+  <a href="https://github.com/lionelmace/mytodo">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
+  </a>
+
   <header>
-    <h1>Todo List</h1>
+    <h1><img src="/icons/bmxlogo.png" width="200" height="47"/></h1>
+    <!-- Todo List</h1-->
   </header>
 
   <section ng-controller="todoCtrlNew">
@@ -36,6 +41,10 @@
     </article>
 
   </section>
+
+  <footer>
+    made by <a href="https://twitter.com/lionelmace">lionel</a> and <a href="https://twitter.com/l2fprod">fred</a>
+  </footer>
 
   <script src="vendor/angular/angular.js"></script>
 
