--- a/public/new.html
+++ b/public/new.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr" ng-app="newTodoApp">
+<html lang="fr" ng-app="todoApp">
 
 <head>
   <meta charset="utf-8" />
   <title>Todo List</title>
   <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/new.css">
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
   <a href="https://github.com/lionelmace/mytodo">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="icons/forkmeongithub.png" alt="Fork me on GitHub">
   </a>
 
   <header>
@@ -19,7 +19,7 @@
     <!-- Todo List</h1-->
   </header>
 
-  <section ng-controller="todoCtrlNew">
+  <section ng-controller="todoCtrl">
     <form id="todo-form" ng-submit="addTodo()">
       <input id="new-todo" placeholder="What do you need to do ?" ng-model="newTodo.text" />
     </form>
@@ -46,13 +46,12 @@
     made by <a href="https://twitter.com/lionelmace">lionel</a> and <a href="https://twitter.com/l2fprod">fred</a>
   </footer>
 
-  <script src="vendor/angular/angular.js"></script>
+  <script src="vendor/angular/angular.min.js"></script>
 
   <!-- load our todo service -->
   <script src="js/services/todo.service.js"></script>
   <!-- load up our controller -->
-  <!-- script src="js/controllers/todo.controller.js"></script -->
-  <script src="js/controllers/todoList.js"></script>
+  <script src="js/controllers/todo.controller.js"></script>
   <!-- load our main application -->
   <script src="js/todo.js"></script>
 
