viewport for responsive design

--- a/public/new.html
+++ b/public/new.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
+
+  <!-- Optimize mobile viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Todo List</title>
+
   <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/new.css">
   <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
