--- a/public/index.html
+++ b/public/index.html
@@ -1,76 +1,56 @@
-<!doctype html>
-
-<!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="todoApp">
+<!DOCTYPE html>
+<html lang="fr" ng-app="todoApp">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+
+  <!-- Optimize mobile viewport for responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Optimize mobile viewport -->
 
-  <title>Todo App</title>
+  <title>Todo List</title>
 
-  <!-- load bootstrap -->
   <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/todo.css">
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
 </head>
 
-<!-- SET THE CONTROLLER -->
-
-<body ng-controller="todoCtrl">
+<body>
   <a href="https://github.com/lionelmace/mytodo">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="icons/forkmeongithub.png" alt="Fork me on GitHub">
   </a>
 
-  <div class="container">
+  <header>
+    <h1><img src="/icons/bmxlogo.png" width="200" height="47"/></h1>
+    <!-- Todo List</h1-->
+  </header>
 
-    <!-- HEADER AND TODO COUNT -->
-    <div class="jumbotron text-center">
-      <h1><span class="label label-info">{{ todos.length }}</span> Todos</h1>
-    </div>
+  <section ng-controller="todoCtrl">
+    <form id="todo-form" ng-submit="addTodo()">
+      <input id="new-todo" placeholder="Type a new todo" ng-model="newTodo.text" />
+    </form>
 
-    <!-- FORM TO CREATE TODOS -->
-    <div id="todo-form" class="row">
-      <div class="col-sm-8 col-sm-offset-2 text-center">
-        <form data-toggle="validator" class="form-inline">
-          <div class="form-group">
-
-            <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-            <input type="text" class="form-control input-lg text-center" placeholder="Add a new todo" ng-model="formData.text" required>
-
-            <!-- addToDo() WILL CREATE NEW TODOS -->
-            <button type="submit" class="btn btn-primary btn-lg" ng-click="addTodo()">Add</button>
+    <article ng-show="todos.length">
+      <ul id="todo-list">
+        <li ng-repeat="todo in todos" ng-class="{completed: todo.completed}">
+          <div class="view">
+            <input class="mark" type="checkbox" ng-model="todo.completed" />
+            <span>{{todo.text}}</span>
+            <!--span class="close" ng-click="deleteTodo(todo)">x</span-->
+            <small><span class="glyphicon glyphicon-trash close" aria-hidden="true" ng-click="deleteTodo(todo)"></span></small>
           </div>
-        </form>
-      </div>
-    </div>
+        </li>
+      </ul>
+      <input id="mark-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)" />
+      <label class="btn btn-info" for="mark-all">Select All</label>
+      <button class="btn btn-danger" ng-click="clearCompletedTodos()">Clear selected todos</button>
+    </article>
 
-    <!-- TODO LIST -->
-    <div id="todo-list" class="row">
-      <div class="col-sm-4 col-sm-offset-4">
-        <!-- LOOP OVER THE TODOS IN $scope.todos -->
-        <div class="checkbox" ng-repeat="todo in todos">
-          <label>
-            <small><span class="glyphicon glyphicon-trash" aria-hidden="true" ng-click="deleteTodo(todo)"></span></small> {{ todo.text }}
-          </label>
-        </div>
-
-        <p class="text-center" ng-show="loading">
-          <span class="fa fa-spinner fa-spin fa-3x"></span>
-        </p>
-      </div>
-    </div>
-
-  </div>
-
+  </section>
 
   <footer>
     made by <a href="https://twitter.com/lionelmace">lionel</a> and <a href="https://twitter.com/l2fprod">fred</a>
   </footer>
 
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
   <script src="vendor/angular/angular.min.js"></script>
 
   <!-- load our todo service -->
@@ -79,6 +59,7 @@
   <script src="js/controllers/todo.controller.js"></script>
   <!-- load our main application -->
   <script src="js/todo.js"></script>
+
 </body>
 
 </html>
