--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- Optimize mobile viewport for responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Todo</title>
+  <title>My Todo</title>
 
   <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/todo.css">
