Change label button

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       </ul>
       <input id="mark-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)" />
       <label class="btn btn-info" for="mark-all">Select All</label>
-      <button class="btn btn-danger" ng-click="clearCompletedTodos()">Clear selected todos</button>
+      <button class="btn btn-danger" ng-click="clearCompletedTodos()">Clear selected</button>
     </article>
 
   </section>
