update IBM Cloud logo

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,7 @@
   </a>
 
   <header>
-    <h1><img src="/icons/bmxlogo.png" width="200" height="47"/></h1>
-    <!-- Todo List</h1-->
+    <h1><img src="/icons/ibmcloud.png" width="361" height="140"/></h1>
   </header>
 
   <section ng-controller="todoCtrl">
