Modifed routes to use ingress-host/todo

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/css/todo.css">
+  <link rel="stylesheet" href="css/todo.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -22,7 +22,7 @@
   </a>
 
   <header>
-    <h1><img src="/icons/ibmcloud.png" width="361" height="140"/></h1>
+    <h1><img src="icons/ibmcloud.png" width="361" height="140"/></h1>
   </header>
 
   <section ng-controller="todoCtrl">
